# bdf2lvgl

./: .gitignore  README.md  pyproject.toml  setup.py
bdf2lvgl/: main.py  parse.py
bdf2lvgl/codegen/: c.py
